# ML_Models_Production_Guide

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SUMMARY.md  _quarto.yml  devenv.nix  devenv.yaml  docker-compose.aws-emulator.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.local-infra.yml  docker-compose.yml  flake.nix  launchJupyter  phase4-results.txt  pyproject.toml  test-phase4-results.txt  test-phase4.sh  validate-docs.sh
.omc/: project-memory.json
_docs/: index.html  search.json
_site/: 01_01-getting_started.html  01_02-platform_introduction.html  01_03-platform_architecture.html  01_04-core_concepts.html  02_01-data_management.html  02_02-model_development.html  02_03-mlflow_integration.html  02_04-complete_workflow.html  03_01-infrastructure_as_code.html  03_02-infrastructure_management.html  03_03-local_development.html  03_04-terraniq_integration.html  04_01-execution_framework.html  04_02-notebook_management.html  04_03-api_contracts.html  04_04-user_interfaces.html  04_05-governance_framework.html  05_01-system_architecture.html
devenv_modules/: TERRANIX_IMPLEMENTATION.md  defaults.nix
k8s/: floci-deployment.yaml  floci-init-job.yaml  install.sh  mlflow-deployment.yaml  namespace.yaml  postgres-deployment.yaml
ml_deploy/: _modidx.py  auth.py  execution_backends.py  governance_gates.py  infrastructure_mcp.py  ml_deploy.py  mlflow_parity.py  notebook_intake.py  terraform_bootstrap.py  vertical_slice.py  webui_contracts.py
nbs/: 00_core.html  00_core.html.md  00_core.ipynb  00_core.qmd  00_introduction.qmd  01_01-getting_started.html  01_01-getting_started.md  01_01-getting_started.qmd  01_02-platform_introduction.html  01_02-platform_introduction.md  01_02-platform_introduction.qmd  01_03-platform_architecture.html  01_03-platform_architecture.md  01_03-platform_architecture.qmd  01_04-core_concepts.html  01_04-core_concepts.md  01_04-core_concepts.qmd  01_05-platform_narrative.html  01_05-platform_narrative.md  01_getting_started.qmd  01_platform_narrative.html  01_platform_narrative.html.md  01_platform_narrative.ipynb  01_platform_narrative.md  01_platform_narrative.qmd  02_01-data_management.html  02_01-data_management.md  02_01-data_management.qmd  02_02-model_development.html  (+71 more)
(+431 files in other folders)
