[project]
name = "ml_deploy"
description = "ML Deployment Reference Implementation"
version = "0.1.0"
authors = [{ name = "ML Engineer", email = "ml@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
keywords = ["machine-learning", "deployment", "nbdev", "pytorch", "mlflow"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "nbdev>=3.0.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "mlflow>=2.0.0",
  "joblib>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/example/ml_deploy"

[project.scripts]
ml-deploy = "ml_deploy.core:main"

[build-system]
requires = ["nbdev>=3.0.0", "setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ml_deploy"]

[tool.nbdev]
# nbdev 3 specific settings
lib_name = "ml_deploy"
# Optional: configure where notebooks are stored
# nbdev_path = "nbs"
# Optional: configure where to export the library
# lib_path = "ml_deploy"
# Optional: configure docs build
# docs_path = "docs"
# Optional: configure test settings
# test_path = "tests"

[tool.nbdev.pypi]
# For publishing to PyPI (when ready)
# repository = "https://upload.pypi.org/legacy/"
# username = "__token__"

[tool.nbdev.docs]
# Quarto documentation settings
# title = "ML Deploy Reference"
# description = "Reference implementation for ML deployment"
# github-repo = "user/ml_deploy"
# quarto-format = "html"
# quarto-pdf = false

[tool.nbdev.test]
# Test settings
# rc_env = {}
# test_pattern = "*_test.py"

[tool.nbdev.serve]
# For local documentation preview
# port = 8000
# host = "127.0.0.1"

[tool.nbdev.export]
# Export controls
# export = True
# parallel = False
# fname = "lib"

[tool.nbdev.bumpversion]
# Version bumping
# part = "patch"
# commit = True
# tag = True

[tool.nbdev.watch]
# File watching for nbdev_dev
# watch = ["nbs/", "ml_deploy/"]
# ignore = ["*.pyc", "__pycache__", ".git", ".quarto", "_quarto"]
